# gnome-ext-hanabi

./: .eslintrc.yml  .gitignore  .licensure.yml  Makefile  README.md  build.js  eslint.config.js  flake.nix  meson.build  package-lock.json  package.json  run.sh  tsconfig.json  weblate-cherry-pick.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report-🐞.md  feature-request-🚀.md
.github/workflows/: build.yml
build-aux/: build-plugins.sh  meson-postinstall.sh
docs/: dev.md  fedora-40.md  fedora-41.md  opensuse-tumbleweed.md  popos-22-04.md  scripting.md  ubuntu-22-04.md  ubuntu-23-04.md
docs/distro/: nixos.md  ubuntu-24-04.md
docs/scripts/: random-wallpaper.py
experimental/: mpris.js
lint/: eslintrc-extension.yml  eslintrc-gjs.yml  eslintrc-shell.yml
scratch/: check_shell.js
src/: .eslintrc.yml  README.md  autoPause.js  autoPause.ts  background.d.ts  constants.ts  dbus.js  dbus.ts  emulateX11WindowType.js  extension.js  extension.ts  global.d.ts  gnomeShellOverride.js  gnomeShellOverride.ts  install.sh  launcher.js  log.sh  logger.js  logger.ts  mediaKeys.js  meson.build  metadata.json.in  package.json  panelMenu.js  panelMenu.ts  playbackState.js  playbackState.ts  prefs.js  prefs.ts  renderer.js  roundedCornersEffect.js  roundedCornersEffect.ts  run-wayland.sh  run.sh  stylesheet.css  test-renderer.sh  wallpaper.js  wallpaper.ts  waylandSubprocess.ts  windowManager.js  (+3 more)
src/po/: LINGUAS  az.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fa.po  fi.po  fr.po  hanabi-extension@jeffshee.github.io.pot  hr.po  hu.po  id.po  it.po  ja.po  meson.build  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  ta.po  th.po  tr.po  uk.po  zh_Hans.po  zh_Hant.po
src/renderer/: renderer.js  renderer.ts
src/schemas/: io.github.jeffshee.hanabi-extension.gschema.xml
tools/: README.md  eslint.config.js  package-lock.json  package.json  run-eslint.sh
